# ClionProjects

./: README.md
HomeBase/: CMakeLists.txt  DataBase.c  DataBase.h  Sensor.c  Sensor.h  TCPConnection.c  TCPConnection.h  TCPServer.c  TCPServer.h  cJSON.c  cJSON.h  main.c
IotRobotCtrl/: CMakeLists.txt  four_axis_aircraft.c  four_axis_aircraft.h  main.c  main.cpp  tcpclient.c  tcpclient.h  test.c  two_axis_aircraft_shape.c  two_axis_aircraft_shape.h  vector_shape.c  vector_shape.h
IotRobotCtrl/common/: gl.h
IotRobotCtrl/shapes/: four_axis_aircraft_shape.c  plot_2d_shape.c  plot_2d_shape.h  two_axis_aircraft_shape.c  vector_shape.c  vector_shape.h
RPiRobot/: CMakeLists.txt  TCPServer.c  TCPServer.h  main.c
