cmake_minimum_required(VERSION 2.8)
project(IotRobotCtrl)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES main.c common/platform.h tcpclient.h tcpclient.c common/gl.h shapes/two_axis_aircraft_shape.h shapes/two_axis_aircraft_shape.c shapes/four_axis_aircraft_shape.h shapes/four_axis_aircraft_shape.c shapes/vector_shape.h shapes/vector_shape.c shapes/plot_2d_shape.h shapes/plot_2d_shape.c)
add_executable(IotRobotCtrl ${SOURCE_FILES})

target_link_libraries(IotRobotCtrl m)

IF (WIN32)
    MESSAGE(STATUS "Now is windows")
ELSEIF (APPLE)
    MESSAGE(STATUS "Now is Apple systens.")
    message("FreeBSD")
    find_package(OpenGL REQUIRED)
    include_directories(${OPENGL_INCLUDE_DIR})
    find_package(GLUT REQUIRED)
    include_directories(${GLUT_INCLUDE_DIR})
    target_link_libraries(IotRobotCtrl ${GLUT_LIBRARY} ${OPENGL_LIBRARY})
ELSEIF (UNIX)
    MESSAGE(STATUS "Now is UNIX-like OS's. Including aPPLE os x  and CygWin")
    target_link_libraries(IotRobotCtrl GL)
    target_link_libraries(IotRobotCtrl GLU)
    target_link_libraries(IotRobotCtrl glut)
    target_link_libraries(IotRobotCtrl pthread)
ENDIF ()